scss output and build cleanup

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "style-dir",
+  "name": "style-dict-prototype",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "build": "style-dictionary build"
+    "build": "node build.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "del": "^7.0.0",
     "style-dictionary": "^3.7.1"
   }
 }
