--- a/config.json
+++ b/config.json
@@ -19,6 +19,24 @@
         }
       ]
     },
+    "scss": {
+      "transforms": [
+        "attribute/cti",
+        "name/cti/kebab",
+        "time/seconds",
+        "content/icon",
+        "size/pxToRem",
+        "color/css"
+      ],
+      "buildPath": "build/scss/",
+      "prefix": "sd",
+      "files": [
+        {
+          "destination": "_tokens.scss",
+          "format": "scss/variables"
+        }
+      ]
+    },
     "js": {
       "transforms": [
         "attribute/cti",
